<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etHabitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_title_e_g_drink_water"
            android:inputType="textCapSentences"
            android:autofillHints="name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_on"
            android:paddingTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/d0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />

            <CheckBox
                android:id="@+id/d1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/d5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
