<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:gravity="center"
    android:padding="24dp" android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageButton
            android:id="@+id/btnInfoTimer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_info_details"
            android:contentDescription="help"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvPhase"
        style="?attr/textAppearanceLabelLarge"
        android:text="FOCUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTime"
        style="?attr/textAppearanceHeadlineLarge"
        android:text="25:00"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvWorkingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:layout_marginTop="12dp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnStart"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnPause"
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"/>

        <Button
            android:id="@+id/btnReset"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="16dp" />

</LinearLayout>

