<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/timerFragment">

    <fragment
        android:id="@+id/timerFragment"
        android:name="com.erickoeckel.tasktimer.TimerFragment"
        android:label="@string/title_timer"
        app:defaultNavHost="false" />

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.erickoeckel.tasktimer.TasksFragment"
        android:label="@string/title_task" />

    <fragment
        android:id="@+id/habitsFragment"
        android:name="com.erickoeckel.tasktimer.HabitsFragment"
        android:label="Habits"
        tools:layout="@layout/fragment_habits" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.erickoeckel.tasktimer.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
        <action
            android:id="@+id/action_profile_to_avatarEditor"
            app:destination="@id/avatarEditorFragment" />
    </fragment>

    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.erickoeckel.tasktimer.FriendsFragment"
        android:label="Friends" />

    <fragment
        android:id="@+id/avatarEditorFragment"
        android:name="com.erickoeckel.tasktimer.AvatarEditorFragment"
        android:label="Customize Avatar"
        tools:layout="@layout/fragment_avatar_editor" />

    <fragment
        android:id="@+id/shopFragment"
        android:name="com.erickoeckel.tasktimer.ShopFragment"
        android:label="Shop"
        tools:layout="@layout/fragment_shop" />

</navigation>
